# MultidimensionalAdaptiveIndexing

./: .gitignore  CMakeLists.txt  Makefile  README.md  Script.py  benchmark.py  download_datasets.py  main.py  maintpch.cpp  makefile  run.py  run_benchmark_forever.py  run_me.py  test.py
.github/workflows/: main.yml
MonetDB/: CreateDatabase.py  generatecsv.cpp  load.sql  makefile  schema.sql
algorithms/: interface.h  makefile
algorithms/branchless_full_scan/: branchless_full_scan.cpp  branchless_full_scan.h
algorithms/cracking_kd_tree/: cracking_kd_tree.cpp  cracking_kd_tree.h
algorithms/standard_cracking/: avl_tree.cpp  avl_tree.h  standard_cracking.cpp  standard_cracking.h
benchmarks/TPCH/: Generate_data.py  Script.py  Test.py
benchmarks/UniformRandom/: Script-sel-1.py  Script-sel-31.py  Script-sel-55.py  Script-sel-75.py  Script.py  Script2.py  Script3.py  execute.sh  gendata.cpp
experiments/: ExecuteExperiment.py  GenerateExperiments.py  benchmark.py  configuration.py  main.py  plot.py  plot_for_scripts.py  plot_results.py  plots.ipynb  run_all.py
experiments/automatic_benchmark/: benchmark.py  config.json
experiments/bug/: config.json  plots.ipynb  run.py
experiments/cost_model/: config.json  plots.ipynb  run.py
experiments/genomics-workload/: plots.ipynb  run.py
experiments/imbalanced_columns/: config.json  plots.ipynb  run.py
experiments/plot_queries/: run.py
experiments/pre_processing/: config.json  plots.ipynb
experiments/real-data-workload/: config.json  plots.ipynb  run.py
experiments/synthetic_workloads/: config.json  plots.ipynb  run.py
experiments/uniformdata-costmodel/: plots.ipynb  run.py
experiments/uniformdata-delta/: config.json  plots.ipynb  run.py
experiments/uniformdata-randomworkload/: plots.ipynb  run.py
include/data/: abstract_generator.hpp  data_reader.hpp  generator.hpp  medians.hpp  my_generator.hpp
include/helpers/: bitvector.hpp  bitvector_with_chars.hpp  column.hpp  cost_model.hpp  index_table.hpp  measurements.hpp  predicate.hpp  query.hpp  split_string.hpp  table.hpp  workload.hpp
include/indexes/: abstract_cracking_kd_tree.hpp  abstract_index.hpp  average_kd_tree.hpp  candidate_list.hpp  cracking_kd_tree.hpp  cracking_kd_tree_broad.hpp  cracking_kd_tree_faces.hpp  cracking_kd_tree_faces_disable.hpp  cracking_kd_tree_mine.hpp  cracking_kd_tree_narrow.hpp  cracking_kd_tree_per_dimension.hpp  cracking_kd_tree_pre_processing.hpp  cracking_kd_tree_recursive.hpp  cracking_kd_tree_recursive_with_recursive_search.hpp  full_scan.hpp  full_scan_candidate_list.hpp  full_scan_slow.hpp  index_factory.hpp  median_kd_tree.hpp  progressive_index.hpp  quasii.hpp  standard_cracking.hpp
plots/: config.json  plots.ipynb  results
plots/.ipynb_checkpoints/: plots-checkpoint.ipynb
results/: combine.py  plot.R
reworking/: CMakeLists.txt
reworking/helpers/: helpers.cpp  measurements.cpp  predicate.cpp  table.cpp
reworking/indexes/: abstract_index.cpp  cracking_kd_tree_broad.cpp  full_scan.cpp
reworking/src/: generator.cpp  index_factory.cpp  main.cpp
reworking/src/data/: data_reader.cpp  generator.cpp
reworking/src/helpers/: measurements.cpp  predicate.cpp  table.cpp
reworking/src/indexes/: abstract_index.cpp  cracking_kd_tree_broad.cpp  full_scan.cpp  index_factory.cpp  indexes.cpp
reworking/src/indexes/kd_tree/: kd_node.cpp  kd_tree.cpp
reworking/src/test/: queries.sql  test.cpp
src/: gendata.cpp  generator.cpp  main.cpp  maintpch.cpp
src/cracking/: avl_tree.cpp  avl_tree.h  cracker_index.h  kd_tree.cpp  kd_tree.h  sideways_cracking.cpp  sideways_cracking.h  standard_cracking.cpp  standard_cracking.h
src/data/: alternating_zoom_generator_main.cpp  data_reader.cpp  generator.cpp  genome_generator_main.cpp  imbalanced_column_main.cpp  medians.cpp  medians_generator_main.cpp  mixed_workload_generator_main.cpp  my_generator.cpp  periodic_generator_main.cpp  power_generator_main.cpp  sequential_generator_main.cpp  sequential_zoom_generator_main.cpp  sequential_zoom_in_generator_main.cpp  sequential_zoom_out_generator_main.cpp  shifting_columns_main.cpp  skewed_generator_main.cpp  skyserver_generator_main.cpp  uniform_generator_main.cpp  zoom_generator_main.cpp  zoom_in_generator_main.cpp  zoom_out_generator_main.cpp
src/fullindex/: binary_search.cpp  binary_search.h  bulkloading_bp_tree.cpp  bulkloading_bp_tree.h  hybrid_radix_insert_sort.cpp  hybrid_radix_insert_sort.h
src/helpers/: bitvector.cpp  column.cpp  cost_model.cpp  helpers.cpp  index_table.cpp  measurements.cpp  predicate.cpp  query.cpp  table.cpp  workload.cpp
src/indexes/: abstract_cracking_kd_tree.cpp  abstract_index.cpp  average_kd_tree.cpp  cracking_kd_tree.cpp  cracking_kd_tree_broad.cpp  cracking_kd_tree_faces.cpp  cracking_kd_tree_faces_disable.cpp  cracking_kd_tree_mine.cpp  cracking_kd_tree_narrow.cpp  cracking_kd_tree_per_dimension.cpp  cracking_kd_tree_pre_processing.cpp  cracking_kd_tree_recursive.cpp  full_scan.cpp  (+9 more)
test/: CMakeLists.txt  test.cpp  test_helper.hpp  tester.hpp
test/data/: my_generator.cpp  uniform_generator.cpp
test/end_to_end_tests/small_test/: small_test.cpp
test/helpers/: bitvector.cpp  bitvector_with_chars.cpp  split_string.cpp  table.cpp
test/indexes/: average_kd_tree.cpp  cracking_kd_tree.cpp  cracking_kd_tree_broad.cpp  cracking_kd_tree_faces.cpp  cracking_kd_tree_faces_disable.cpp  cracking_kd_tree_mine.cpp  cracking_kd_tree_narrow.cpp  cracking_kd_tree_per_dimension.cpp  cracking_kd_tree_pre_processing.cpp  cracking_kd_tree_recursive.cpp  cracking_kd_tree_recursive_with_recursive_search.cpp  full_scan.cpp  full_scan_candidate_list.cpp  index_factory.cpp  median_kd_tree.cpp  progressive_indexing.cpp  quasii.cpp  standard_cracking.cpp
test/indexes/cracking_kd_trees/: all_hyperplanes_broad.cpp  all_hyperplanes_narrow.cpp
test/test_data/data/: 0genome_data  sequential_zoom_in  uniform2
test/test_data/queries/: 0genome_queries  alternating_zoom_in  alternating_zoom_out  medians_workload  periodic  sequential  sequential_zoom_in  sequential_zoom_out  skewed  uniform2  zoom_in  zoom_out
(+521 files in other folders)
